netlink15_derive/tests/ui/multiple-associated-values-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/multiple-associated-values-fails.rs:6:10
  |
6 | #[derive(NetlinkAttributeSerializable)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Failed to parse enum variants in NetlinkAttributeSerializable derive.: MultipleAssociatedValues { ident: Ident { ident: "Flags", span: #0 bytes(265..270) } }
